# midplay

./: Cargo.toml  README.md
data/: Operette.mid  longnight2.mid
examples/: test_generic.rs  test_native.rs  util.rs
src/: lib.rs
src/generic/: midi_container.rs  mod.rs
src/native/linux/: mod.rs
src/native/windows/: mci.rs  mod.rs  utf.rs  wide.rs
src/windows/: mod.rs
