[package]
name = "midplay"
version = "0.1.0"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { git = "https://github.com/Ruin0x11/winapi-rs", branch = "mci-2", features = ["mmsystem", "winuser", "minwindef"] }

[dependencies]
midir = "0.7.0"
midly = "0.5.1"
lazy_static = "1.4.0"
anyhow = "1.0.38"
log = "0.4.14"
